src/components/style/Loading.scss
@use "var";
@keyframes ldio-64v2x4mvyqf {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}
.ldio div {
  box-sizing: border-box !important;
}
.ldio > div {
  position: absolute;
  width: 72px;
  height: 72px;
  top: 15px;
  left: 15px;
  border-radius: 50%;
  border: 8px solid #000;
  border-color: var.$primary transparent var.$primary transparent;
  animation: ldio-64v2x4mvyqf 1s linear infinite;
}
.ldio > div:nth-child(2) {
  border-color: transparent;
}
.ldio > div:nth-child(2) div {
  position: absolute;
  width: 100%;
  height: 100%;
  transform: rotate(45deg);
}
.ldio > div:nth-child(2) div:before,
.ldio > div:nth-child(2) div:after {
  content: "";
  display: block;
  position: absolute;
  width: 8px;
  height: 8x;
  top: -8px;
  left: 24px;
  background: var.$primary;
  border-radius: 50%;
  box-shadow: 0 64px 0 0 var.$primary;
}
.ldio > div:nth-child(2) div:after {
  left: -16px;
  top: 48px;
  box-shadow: 64px 0 0 0 var.$primary;
}
.loadingio-spinner-dual-ring {
  margin: auto;
  width: 100px;
  height: 100px;
  display: inline-block;
  overflow: hidden;
}
.ldio {
  width: 100%;
  height: 100%;
  position: relative;
  transform: translateZ(0) scale(1);
  backface-visibility: hidden;
  transform-origin: 0 0; /* see note above */
}
.ldio div {
  box-sizing: content-box;
}
/* generated by https://loading.io/ */

